--- a/SpaceBeans/Game/SpaceBeans.csproj
+++ b/SpaceBeans/Game/SpaceBeans.csproj
@@ -13,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <ProductVersion>12.0.0</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,15 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CodePhile.Core">
+    <Reference Include="CodePhile.Core, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\CodePhile.Core.0.1.0.0\lib\net40\CodePhile.Core.dll</HintPath>
     </Reference>
-    <Reference Include="CodePhile.Games.Core, Version=0.1.2.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="CodePhile.Games.Core, Version=0.1.17.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\CodePhile.Games.Core.0.1.2-alpha\lib\net40\CodePhile.Games.Core.dll</HintPath>
+      <HintPath>..\..\packages\CodePhile.Games.Core.0.1.17-alpha\lib\net40\CodePhile.Games.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BeanCargo.cs" />
@@ -49,6 +53,8 @@
     <Compile Include="Bean.cs" />
     <Compile Include="DrawPile.cs" />
     <Compile Include="CollectionIdentifier.cs" />
+    <Compile Include="GameSetupPart.cs" />
+    <Compile Include="PlayTurnsGamePart.cs" />
     <Compile Include="SellDecision.cs" />
     <Compile Include="SellPhase.cs" />
     <Compile Include="DiscardPile.cs" />
@@ -56,7 +62,12 @@
     <Compile Include="DrawPhase.cs" />
     <Compile Include="BuyDecision.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetupDrawPileDecision.cs" />
+    <Compile Include="SpaceBeansDecision.cs" />
     <Compile Include="SpaceBeansGame.cs" />
+    <Compile Include="SpaceBeansGamePart.cs" />
+    <Compile Include="SpaceBeansGameSetup.cs" />
+    <Compile Include="StandardRules.cs" />
     <Compile Include="Suit.cs" />
     <Compile Include="Trader.cs" />
     <Compile Include="Turn.cs" />
