--- a/SpaceBeans/Terminal/packages.config
+++ b/SpaceBeans/Terminal/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CodePhile.Core" version="0.1.0.0" targetFramework="net40" />
-  <package id="CodePhile.Games.Core" version="0.1.2-alpha" targetFramework="net40" />
+  <package id="CodePhile.Games.Core" version="0.1.17-alpha" targetFramework="net40" />
+  <package id="CodePhile.Games.Remote" version="0.1.17-alpha" targetFramework="net40" />
+  <package id="CodePhile.ServiceModel" version="0.1.1-alpha" targetFramework="net40" />
   <package id="CodePhile.Terminal" version="0.1.1-alpha" targetFramework="net40" />
 </packages>
