--- a/SpaceBeans/Terminal/SpaceBeans.Terminal.csproj
+++ b/SpaceBeans/Terminal/SpaceBeans.Terminal.csproj
@@ -9,12 +9,13 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SpaceBeans</RootNamespace>
     <AssemblyName>SpaceBeans.Terminal</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <ProductVersion>12.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -27,6 +28,8 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>ExtendedCorrectnessRules.ruleset</CodeAnalysisRuleSet>
     <Externalconsole>true</Externalconsole>
+    <Prefer32Bit>false</Prefer32Bit>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,6 +39,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CodePhile.Core">
@@ -59,11 +63,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsolePlayer.cs" />
-    <Compile Include="IDecisionMaker.cs" />
-    <Compile Include="ISpaceBeansGameClient.cs" />
-    <Compile Include="ISpaceBeansGameHost.cs" />
-    <Compile Include="LocalPlayer.cs" />
+    <Compile Include="GamePlayer.cs" />
+    <Compile Include="GameSetupDecisionMaker.cs" />
     <Compile Include="RemotePlayer.cs" />
+    <Compile Include="IDecisionMaker.cs" />
+    <Compile Include="LocalPlayer.cs" />
+    <Compile Include="LocalSystem.cs" />
+    <Compile Include="RemoteConsolePlayer.cs" />
+    <Compile Include="RemoteSystem.cs" />
     <Compile Include="SellDecisionMaker.cs" />
     <Compile Include="DecisionMaker.cs" />
     <Compile Include="DrawDecisionMaker.cs" />
@@ -71,9 +78,7 @@
     <Compile Include="BuyDecisionMaker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpaceBeansGameClient.cs" />
-    <Compile Include="SpaceBeansGameHost.cs" />
-    <Compile Include="SpaceBeansSeat.cs" />
+    <Compile Include="SpaceBeansTerminalClient.cs" />
     <Compile Include="TraderDecisionMaker.cs" />
     <Compile Include="YesNoMenu.cs" />
   </ItemGroup>
@@ -81,6 +86,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\SpaceBeans.Remote\SpaceBeans.Remote.csproj">
+      <Project>{a1531fee-8850-4f2e-ad82-9208fa826678}</Project>
+      <Name>SpaceBeans.Remote</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Game\SpaceBeans.csproj">
       <Project>{573F07AE-0760-4657-B813-ADA206811DED}</Project>
       <Name>SpaceBeans</Name>
