--- a/SpaceBeans.Server/packages.config
+++ b/SpaceBeans.Server/packages.config
@@ -3,4 +3,5 @@
   <package id="CodePhile.Core" version="0.1.0.0" targetFramework="net40" />
   <package id="CodePhile.Games.Core" version="0.1.17-alpha" targetFramework="net40" />
   <package id="CodePhile.Games.Remote" version="0.1.17-alpha" targetFramework="net40" />
+  <package id="DuplexHttpBinding" version="0.1.8-beta" targetFramework="net40" />
 </packages>
