--- a/SpaceBeans.Server/web.config
+++ b/SpaceBeans.Server/web.config
@@ -1,20 +1,41 @@
 <?xml version="1.0"?>
 <configuration>
   <system.serviceModel>
+    <extensions>
+      <bindingExtensions>
+        <add name="duplexHttpBinding" type="Microsoft.Samples.DuplexHttp.DuplexHttpBindingCollectionElement, DuplexHttpBinding" />
+      </bindingExtensions>
+    </extensions>
+    <bindings>
+      <duplexHttpBinding>
+        <binding name="duplex"
+             closeTimeout="00:01:00"
+             openTimeout="00:01:00"
+             receiveTimeout="24.20:31:23.6470000"
+             sendTimeout="02:01:00"
+             session="HttpSession"
+             sessionTimeout="00:10:00"
+             maxUndeliveredMessages="100"
+             maxMessagesInBatch="10"
+             maxPollingReplyInterval="00:02:00">
+        </binding>
+      </duplexHttpBinding>
+    </bindings>
     <services>
       <service name="SpaceBeans.SpaceBeansGameHost">
-        <endpoint binding="wsDualHttpBinding" contract="SpaceBeans.ISpaceBeansGameHost" />
+        <endpoint binding="duplexHttpBinding" bindingConfiguration="duplex"
+          contract="SpaceBeans.ISpaceBeansGameHost" />
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
-          <serviceMetadata httpGetEnabled="true"/>
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
   </system.serviceModel>
   <system.web>
     <compilation debug="true"/>
