--- a/SpaceBeans/Terminal/packages.config
+++ b/SpaceBeans/Terminal/packages.config
@@ -5,4 +5,5 @@
   <package id="CodePhile.Games.Remote" version="0.1.17-alpha" targetFramework="net40" />
   <package id="CodePhile.ServiceModel" version="0.1.1-alpha" targetFramework="net40" />
   <package id="CodePhile.Terminal" version="0.1.1-alpha" targetFramework="net40" />
+  <package id="DuplexHttpBinding" version="0.1.8-beta" targetFramework="net45" />
 </packages>
