--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # System Specific
 *.DS_Store
 
+# Generated Files
+Resource.designer.cs
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
