--- a/SpaceBeans.Windows/packages.config
+++ b/SpaceBeans.Windows/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CodePhile.Core" version="0.1.0.0" targetFramework="net45" />
   <package id="CodePhile.Games.Core" version="0.1.17-alpha" targetFramework="net45" />
+  <package id="MonoGame.Framework" version="3.0.1.23" targetFramework="net45" />
 </packages>
